2008-11-24  Cameron Zwarich  <zwarich@apple.com>

Reviewed by Geoff Garen.

        Bug 13790: Function declarations are not treated as statements (used to affect starcraft2.com)
        <https://bugs.webkit.org/show_bug.cgi?id=13790>

        Modify the parser to treat function declarations as statements,
        simplifying the grammar in the process. Technically, according to the
        grammar in the ECMA spec, function declarations are not statements and
        can not be used everywhere that statements can, but it is not worth the
        possibility compatibility issues just to stick to the spec in this case.

        JavaScriptCore:

        * parser/Grammar.y:
        * parser/Nodes.cpp:
        (JSC::FuncDeclNode::emitBytecode): Avoid returning ignoredResult()
        as a result, because it causes a crash in DoWhileNode::emitBytecode().

        LayoutTests:

        * fast/js/function-declaration-statement-expected.txt: Added.
        * fast/js/function-declaration-statement.html: Added.
        * fast/js/resources/function-declaration-statement.js: Added.


Canonical link: https://commits.webkit.org/30955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38747 268f45cc-cd09-0410-ab3c-d52691b4dbfc